fix namespace exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(banditGlmnet,default)
 S3method(model.matrix,banditModel)
+S3method(print,summary.bandit)
 export(banditGlmnet)
 export(bandit_stan_glm)
 export(bandit_stan_glmer)
@@ -11,14 +12,26 @@ export(bulkInsert)
 export(coef.bandit)
 export(coef.banditGlmnet)
 export(formula.bandit)
+export(getJobs)
+export(getModel)
+export(getModel.bandit)
 export(getSamples)
 export(model.frame.bandit)
 export(model.frame.banditModel)
 export(plot.bandit)
 export(predict.bandit)
 export(predict.banditGlmnet)
+export(predict.bandit_thompson)
+export(summary.bandit)
 exportClasses(bandit_stan_glm)
 exportClasses(bandit_stan_glmer)
 exportClasses(bandit_stan_lm)
 exportClasses(bandit_ucb)
+exportMethods(coef)
+exportMethods(formula)
+exportMethods(getModel)
+exportMethods(model.frame)
+exportMethods(plot)
+exportMethods(predict)
+exportMethods(summary)
 import(glmnet)
