--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,4 +34,11 @@ exportMethods(model.frame)
 exportMethods(plot)
 exportMethods(predict)
 exportMethods(summary)
+import("(RC)")
+import(A)
+import(bandit)
+import(class)
 import(glmnet)
+import(methods)
+import(object.)
+import(reference)
