more documentation, new version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(getSamples)
 export(model.frame.bandit)
 export(model.frame.banditModel)
 export(plot.bandit)
+export(plotCoef)
+export(plotReward)
 export(predict.bandit)
 export(predict.banditGlmnet)
 export(predict.bandit_thompson)
